--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss"        
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -84,7 +84,10 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/@angular/cdk/overlay-prebuilt.css"
+
             ],
             "scripts": [],
             "assets": [
