--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.5",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.5",
     "@angular/compiler": "~8.2.5",
     "@angular/core": "~8.2.5",
     "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.5",
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
@@ -37,6 +39,7 @@
     "rxjs": "~6.5.3",
     "sweetalert2": "^9.10.12",
     "tslib": "^1.9.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
